--- a/moveit_ompl/package.xml
+++ b/moveit_ompl/package.xml
@@ -24,8 +24,10 @@
   <build_depend>tf</build_depend>
   <build_depend>pluginlib</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>bolt_core</build_depend>
 
   <run_depend>moveit_core</run_depend>
+  <run_depend>bolt_core</run_depend>
   <run_depend>ompl</run_depend>
   <run_depend>eigen_conversions</run_depend>
   <run_depend>moveit_ros_planning</run_depend>
