--- a/moveit_ompl/package.xml
+++ b/moveit_ompl/package.xml
@@ -24,6 +24,7 @@
   <build_depend>tf</build_depend>
   <build_depend>pluginlib</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>moveit_core</build_depend>
   <build_depend>bolt_core</build_depend>
 
   <run_depend>moveit_core</run_depend>
